Jupyter notebook update (#15)
* fix

* add pose estimation models

* Update

- add 6_evaluation_and_visualization.ipynb
- fix 5_pose_estimation_models.ipynb
- add final codes

--- a/jupyter-notebooks/4_pose_dataset_and_preprocessing.ipynb
+++ b/jupyter-notebooks/4_pose_dataset_and_preprocessing.ipynb
@@ -18,25 +18,31 @@
     "\n",
     "#### What is Human Pose Estimation?\n",
     "\n",
+    "<img src=\"https://miro.medium.com/max/2712/1*q8Bq1q0tb0BSCaVmcHygFw.png\" width=400>\n",
+    "\n",
     "[\"Precise human pose estimation based on two-dimensional images for kinematic analysis\"](https://www.spiedigitallibrary.org/conference-proceedings-of-spie/11330/113300F/Precise-human-pose-estimation-based-on-two-dimensional-images-for/10.1117/12.2542539.full?SSO=1) (2020)\n",
     "\n",
     "> Human Pose Estimation (HPE) is a Computer Vision problem where the goal is to estimate keypoint locations in joints and body parts to describe the position and orientation of the bodies. This information allows us to recognize human actions and their interaction with a machine, opening a broad set of potential applications in the medical field such as therapy using virtual and augmented reality, robot caregivers, virtual physical therapy and kinematic analysis.\n",
     "\n",
     "사람의 관절에 대해 파악하고 이해하는 것은 human computer interactions, gaming, virtual reality, video surveillance, sports analysis, medical assistance 등 많은 활용 가치가 있기에 과거부터 꾸준히 연구 되어온 분야입니다. 최근 Deep learning의 등장으로 다양한 분야의 연구들이 이전보다도 큰 성과를 보이고 있는데, human pose estimation 분야 또한, 2016년 Google이 제안한 Deep Pose 모델을 시작으로 활발히 연구가 이루어지고 있습니다.\n",
     "\n",
-    "<img src=\"https://miro.medium.com/max/2712/1*q8Bq1q0tb0BSCaVmcHygFw.png\" width=400>\n",
+    "<img src=\"./src_imgs/8.PNG\" width=500>\n",
+    "\n",
+    "2D Human Pose Estimation은 훈련 시나리오에 따라 크게 2가지로 나눌 수 있습니다. <br/>\n",
+    "Single-Person Approaches는 이미지 속 특정한 사람의 포즈를 추정하는 것이 주된 목표입니다. Single-Person Pose Estimation(SPPE) 훈련 시나리오에선 원본 이미지내 사람이 몇명이 존재하는지, 각 사람에 대한 중심 좌표 등 사전 참조할 정보가 주어집니다. 반면, Multi-Person Pose Estimation(MPPE) 훈련 시나리오에선 사전 정보가 주어지지 않는 상태에서 사람이 몇명이 존재하는지, 어디에 위치하는지 등 추가적인 task가 결합된 형태입니다. 사람의 위치를 먼저 찾아내고 포즈를 추출하는 과정을 Top-down 접근법, 이미지내 모든 사람의 포즈를 추출하고 이후에 각 포즈를 사람 instance 단위로 연결하는 과정을 Bottom-up 접근법이라고 합니다. <br/>\n",
+    "SPPE는 모델이 좌표를 출력하는 방식에 따라 direct regression과 heatmap based으로 나눌 수 있으며, 최근에는 대부분의 모델들이 heatmap 좌표 표현 방식을 사용합니다. 저희는 SPPE를 기준으로 알아보겠습니다.\n",
     "\n",
     "#### Training Pipeline\n",
     "\n",
     "아래 그림은 [\"Distribution Aware Coordinate Representation for Human Pose Estimation\"](https://openaccess.thecvf.com/content_CVPR_2020/papers/Zhang_Distribution-Aware_Coordinate_Representation_for_Human_Pose_Estimation_CVPR_2020_paper.pdf)\n",
-    "논문에서 소개된 pose estimation 훈련 pipeline을 나타내고 있습니다. <br/>\n",
+    "논문에서 소개된 SPPE 훈련 pipeline을 나타내고 있습니다. <br/>\n",
     "\n",
     "<img src=\"./src_imgs/3.PNG\" width=400> <br/>\n",
     "\n",
-    "- (a) Data Preprocessing : 모델을 훈련하기 전, 입력(input) 데이터와 목표(target) 데이터를 어떻게 구성할지 정하는 단계입니다. 예를 들어, 데이터셋의 source image는 resolution이 매우 클 수도, 매우 작을 수도 있습니다. 또한, 이미지들마다 서로 다른 resolution을 가지고 있을 수도 있습니다. 따라서 우선적으로 모델에 통일된 크기(prefixed size)의 이미지를 전달하기 위해 source image를 input image로 변환하는 과정이 필요합니다. 이 과정을 **Transform**이라고 하겠습니다. 또한, 데이터 셋에는 훈련을 위해 입력이미지와 한쌍인 label 즉, 포즈 좌표 annotation이 존재합니다. 입력 이미지의 resolution이 Transform에 의해 조정될 것이므로 그에 따라 포즈 좌표도 동일한 scale로 Transform 하는 과정이 필요합니다. 포즈 좌표는 vector로 표현되지만, 최근 많은 논문들은 이 vector를 heatmap으로 바꾸어 사용하고 있습니다. heatmap이란 1D인 vector와 다르게 2D로써 표현되며, 2D matrix의 각 요소들은 포즈가 존재할 probability를 계산하게 됩니다. 자세한 것은 이후에 설명하겠습니다.\n",
+    "- (a) Data Preprocessing : 모델을 훈련하기 전, 입력(input) 데이터와 목표(target) 데이터를 어떻게 구성할지 정하는 단계입니다. 예를 들어, 데이터셋의 source image는 resolution이 매우 클 수도, 매우 작을 수도 있습니다. 또한, 이미지들마다 서로 다른 resolution을 가지고 있을 수도 있습니다. 따라서 우선적으로 모델에 통일된 크기(prefixed size)의 이미지를 전달하기 위해 source image를 input image로 변환하는 과정이 필요합니다. 이 과정을 **Transform**이라고 하겠습니다. 또한, 데이터 셋에는 훈련을 위해 입력이미지와 한쌍인 label 즉, 포즈 좌표 annotation이 존재합니다. 포즈 좌표는 vector로 표현되지만, 최근 많은 논문들은 이 vector를 Gaussian kernel(Gaussian Distribution)을 이용해 heatmap으로 바꾸어 사용하고 있습니다. 만들어진 heatmap은 1D인 vector와 다르게 2D로 표현되며, 2D matrix의 각 요소들은 포즈가 존재할 probability를 나타내게 됩니다 (0 ~ 1).\n",
     "\n",
     "\n",
-    "- (b) Human Pose Estimation Model : 모델을 정의할 때 몇 가지 미리 정하여야하는 hyperparameters가 존재합니다. 예를 들어 데이터셋에 따라 pose 좌표들의 개수 곧, 사람 관절을 표현한 number of joints가 각기 다를 수 있습니다. 실제로 대표적인 데이터셋인 COCO Keypoint Detection, MPII, LSP는 서로 관절 개수가 다릅니다 (각각 17, 16, 14). 이를 고려한다면 모델 아키텍처 또한 달라질 수 있습니다. 결과적으로 이 과정에서 정의된 모델은 input image를 받아 predicted heatmaps에 관절 keypoints가 있을법한 위치를 regression 하게 됩니다. 본문에선 대표적인 CNN 모델 2가지를 소개하겠습니다. \n",
+    "- (b) Human Pose Estimation Model : 모델을 정의할 때 몇 가지 미리 정해야하는 hyperparameters가 존재합니다. 예를 들어 데이터셋에 따라 pose 좌표들의 개수 곧, 사람 관절을 표현한 number of joints가 각기 다를 수 있습니다. 실제로 대표적인 데이터셋인 COCO Keypoint Detection, MPII, LSP는 서로 관절 개수가 다릅니다 (각각 17, 16, 14). 이를 고려한다면 모델 아키텍처 또한 달라질 수 있습니다. 결과적으로 이 과정에서 정의된 모델은 input image를 받아 predicted heatmaps에 관절 keypoints가 있을법한 위치를 regression 하게 됩니다. 본문에선 대표적인 CNN 모델 2가지를 소개하겠습니다. \n",
     "\n",
     "\n",
     "- (c) Model Training : 훈련과정 중 target heatmap(ground-truth heatmap)과 predicted heatmap간의 차이 곧, MSE(Mean Squared Error) loss를 계산합니다. \n",
